# tap-s3

./: README.md  config.sample.json  pyproject.toml
tap_s3/: __init__.py  client.py  discover.py  schema_builder.py  streams.py  sync.py  utils.py
tap_s3/schemas/: menu_export.json
tests/: conftest.py  test_client.py  test_discover.py  test_schema_builder.py  test_streams.py  test_sync.py  test_utils.py
